updated the front-end styling + organized files

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
- REACT_APP_API_KEY = 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
+ REACT_APP_API_KEY = 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
+ REACT_APP_API_KEY_2=YoFNYsMwuG2nAIgNj6baxw==sKw4bdnGnLWOawFm
